@@ -1143,7 +1143,7 @@ namespace Chummer.Backend.Equipment
                     if (objMod.Equipped)
                         intTotalArmor += objMod.Armor;
                 }
-                
+
                 if (value > intTotalArmor)
                     value = intTotalArmor;
 
@@ -1509,7 +1509,8 @@ namespace Chummer.Backend.Equipment
                 int.TryParse(ArmorValue.Replace("Rating", Rating.ToString(GlobalSettings.InvariantCultureInfo)), NumberStyles.Any, GlobalSettings.InvariantCultureInfo, out int intTotalArmor);
                 // Go through all of the Mods for this piece of Armor and add the Armor value.
                 intTotalArmor += ArmorMods.Sum(o => o.Equipped, o => o.Armor);
-                intTotalArmor -= ArmorDamage;
+                if (_objCharacter?.Settings.ArmorDegradation == true)
+                    intTotalArmor -= ArmorDamage;
 
                 return Math.Max(intTotalArmor, 0);
             }
@@ -1525,7 +1526,8 @@ namespace Chummer.Backend.Equipment
                 int.TryParse(ArmorOverrideValue.Replace("Rating", Rating.ToString(GlobalSettings.InvariantCultureInfo)), NumberStyles.Any, GlobalSettings.InvariantCultureInfo, out int intTotalArmor);
                 // Go through all of the Mods for this piece of Armor and add the Armor value.
                 intTotalArmor += ArmorMods.Sum(o => o.Equipped, o => o.Armor);
-                intTotalArmor -= ArmorDamage;
+                if (_objCharacter?.Settings.ArmorDegradation == true)
+                    intTotalArmor -= ArmorDamage;
 
                 return Math.Max(intTotalArmor, 0);
             }
