@@ -27,6 +27,8 @@ Application Changes:
 - Ammunition loaded into a weapon is now forced to be equipped and cannot be unequipped.
 - The right-click menu where users can rename custom items during character creation is now available again.
 - Added a minor quality-of-life feature where changing the PDF application of Chummer can also cause the PDF parameters setting to automatically update itself to match the selected application.
+- Controls to modify armor degradation values are no longer visible unless playing with settings that have armor degradation turned on.
+- Any degraded armor on the sheet of a character that is using settings that do not have armor degradation enabled is now ignored.
 
 Data Changes:
 - Added bonus nodes for Shooter (The Soldier) paragon's Compiling dice pool penalty and +1 limit for attack actions. Fixes #4935.
